bug4476 add overlapping races automatically, detect already uploaded videos and skip, fix bug in metadata detection

--- a/java/com.sap.sailing.gwt.ui/src/main/java/com/sap/sailing/gwt/ui/adminconsole/multivideo/MultiVideoDialog.css
+++ b/java/com.sap.sailing.gwt.ui/src/main/java/com/sap/sailing/gwt/ui/adminconsole/multivideo/MultiVideoDialog.css
@@ -10,3 +10,7 @@
 .tableStyle td {
     max-width: 800px;
 }
+
+.checkboxStyle {
+    display: block;
+}
